--- a/css/prepros.config
+++ b/css/prepros.config
@@ -76,7 +76,6 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
-      "reuseConnection": true,
       "connectionType": "ftp",
       "history": []
     },
@@ -107,8 +106,7 @@
                 "> 2%",
                 "not dead"
               ],
-              "preserveImports": false,
-              "polyfills": false
+              "preserveImports": false
             }
           },
           "@babel/preset-react": true,
@@ -154,8 +152,7 @@
                     "> 2%",
                     "not dead"
                   ],
-                  "preserveImports": false,
-                  "polyfills": false
+                  "preserveImports": false
                 }
               },
               "@babel/preset-react": true,
@@ -347,18 +344,6 @@
       },
       "png": {
         "quality": 90
-      },
-      "postcss-import": {
-        "ignoreKeywords": [],
-        "sourceMap": false
-      },
-      "postcss-preset-env": {
-        "stage": 2,
-        "browsers": [
-          "> 2%",
-          "not dead"
-        ],
-        "sourceMap": false
       },
       "pug": {
         "pretty": true
@@ -568,14 +553,6 @@
           {
             "task": "copy",
             "enable": true
-          },
-          {
-            "task": "postcss-import",
-            "enable": false
-          },
-          {
-            "task": "postcss-preset-env",
-            "enable": false
           },
           {
             "task": "autoprefixer",
@@ -906,6 +883,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "home.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "sourceMap": true,
+          "customOutput": "home.css"
+        }
+      }
+    ]
   }
 }
